# calc_app

./: .gitignore  CMakeLists.txt  Jenkinsfile  README
addition/: CMakeLists.txt
addition/include/: add.hpp
addition/src/: add.cpp
calc_runner/src/: main.cpp
calculator/: CMakeLists.txt
calculator/include/: calc.hpp
calculator/src/: calc.cpp
circle/: CMakeLists.txt
circle/include/: circle.hpp
circle/src/: circle.cpp
division/: CMakeLists.txt
division/include/: div.hpp
division/src/: div.cpp
multiplication/: CMakeLists.txt
multiplication/include/: mult.hpp
multiplication/src/: mult.cpp
power/: CMakeLists.txt
power/include/: pow.hpp
power/src/: pow.cpp
scripts/: install.sh  run_calc.sh  uninstall.sh
square/: CMakeLists.txt
square/include/: sqr.hpp
square/src/: sqr.cpp
subtraction/: CMakeLists.txt
subtraction/include/: sub.hpp
subtraction/src/: sub.cpp
sum/: CMakeLists.txt
sum/include/: sum.hpp
sum/src/: sum.cpp
test/: CMakeLists.txt  test_add.cpp  test_circle.cpp  test_div.cpp  test_main.cpp  test_mult.cpp  test_pow.cpp  test_sqr.cpp  test_sub.cpp  test_sum.cpp
